--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,8 @@
     "develop": "strapi develop",
     "start": "strapi start",
     "build": "strapi build",
-    "strapi": "strapi"
+    "strapi": "strapi",
+    "deploy": "npm run build && vercel --prod --confirm --token xC1wowq1S8zQ0LPPAXdk13aU"
   },
   "devDependencies": {},
   "dependencies": {
@@ -23,6 +24,7 @@
     "strapi-plugin-graphql": "^3.5.2",
     "strapi-plugin-upload": "3.5.2",
     "strapi-plugin-users-permissions": "3.5.2",
+    "strapi-plugin-vercel": "0.0.4",
     "strapi-utils": "3.5.2"
   },
   "author": {
